--- a/about.html
+++ b/about.html
@@ -8,14 +8,34 @@
 </head>
 <body>
     <header>
-        <h1>Header</h1>
+        <h1>Michael Burkett's Blog (MI 349)</h1>
     </header>
-    
+
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </nav>
+
+    <main>
+
+        <p><img src="IMG_2829.JPG" width=200 height=300 alt="A picture of me."></p>
+
+        <h1>About me:</h1>
+        
+        <p>I am a junior at Michigan State University majoring in Computer Science. I'm studying to get a job as a game developer. Game design has been a passion of mine for several years now and I've been coding since middle school.</p>
+
+        <p>Outside of school, I'm an Eagle Scout, and a member of Spartasoft and Cru.</p>
+
+        <h2>Hobbies:</h2>
+        <ul class="burndown">
+            <li>Video Games</li>
+            <li>Tabletop Games</li>
+            <li>Game Design</li>
+            <li>Biking</li>
+        </ul>
+
+    </main>
 </body>
 </html>
