form and table lab

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -56,8 +57,45 @@
             <p>The game's crafting is another one of it's strong points. Almost every item that you find can be crafted into something that will aid you on your journey. Consumables are extremely important for staying alive in Outward. Enemies will drop components that you need for weapons and armor. Gems that you mine from the ground can be used to open secret doors in dungeons.</p>
 
             <p>While Outward can be an extremely difficult game, no other RPG has been as immersive for me. The game's systems work together well to create a punishing environment and an exciting storyline. Playing a game where you aren't the "chosen one" is oddly refreshing.</p>
+            <p></p>
+
+            <h3>The DLC...</h3>
+
+            <table>
+                <tr>
+                    <th>Version</th>
+                    <th>Date Released</th>
+                    <th>Description</th>
+                </tr>
+                <tr>
+                    <td>Base Game</td>
+                    <td>March 26, 2019</td>
+                    <td>The base game comes with four different regions to explore: Chersonese, the starting region, Enmerkar Forest, home base for the Blue Chamber questline, Abrassar, the region of the Heroic Kingdom, and the Hallowed Marsh, the land of Holy Mission. The player must choose one of the three organizations. Once they have, they will be set on missions to combat the "Scourge" a type of evil monster that has mysteriously appeared around the world.</td>
+                </tr>
+                <tr>
+                    <td>The Soroboreans</td>
+                    <td>June 16, 2020</td>
+                    <td>The Soroboreans DLC adds the Antique Plateau region along with the Sorobor Academy questline which runs parallel to the three main questlines. Players must work to prevent the "Rust Lich" from destroying Harmattan, the major city in the Antique Plateau. Due to the region's size, there is a runic train system to help players navigate it more quickly.</td>
+                </tr>
+                <tr>
+                    <td>The Three Brothers</td>
+                    <td>December 15, 2020</td>
+                    <td>The Three Brothers adds the Caldera region to the game along with the Sirocco questline which takes place after the main game's story. Caldera's volcano has destroyed the city of Sirocco and the citizens need the player's help if they hope to rebuild their home.</td>
+                </tr>
+            </table>
         </article>
 
     </main>
+
+    <section>
+        <h2>Email Notifications</h2>
+        <form>
+            <label>Sign up for our newsletter:
+                <input type="text">
+            </label>
+            <button>Subscribe</button>
+        </form>
+    </section>
+
 </body>
 </html>
