CSS update edits

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
 
-    <main>
+    <main id="content">
 
         <p><img src="IMG_2829.JPG" width=200 height=300 alt="A picture of me."></p>
 
