--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
 
-    <section>
+    <section id=content>
         <h2>Contact Form</h2>
         <form>
             <div>
