--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
 
-    <main id="blog">
+    <main id="content">
 
         <article class="blog-post">
             <h2>Game Review: Payday 2</h2>
