--- a/about.html
+++ b/about.html
@@ -5,32 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>MI 349 Blog Page</title>
+    <title>MI 349 Blog About Page</title>
 </head>
 <body>
-    <header>
-        <h1>Michael Burkett's Blog (MI 349)</h1>
-    </header>
+    <section class="sticky">
+        <header>
+            <h1>Michael Burkett's Blog (MI 349)</h1>
+        </header>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul class="link-tree">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </section>
 
     <main id="content">
 
-        <p><img src="IMG_2829.JPG" width=200 height=300 alt="A picture of me."></p>
+        <figure class="self-pic">
+            <img src="IMG_2829.JPG" width=200 height=300 alt="A picture of me.">
+            <figcaption>Picture of myself.</figcaption>
+        </figure>
 
-        <h1>About me:</h1>
+        <h2>About me:</h2>
         
         <p>I am a junior at Michigan State University majoring in Computer Science. I'm studying to get a job as a game developer. Game design has been a passion of mine for several years now and I've been coding since middle school.</p>
 
         <p>Outside of school, I'm an Eagle Scout, and a member of Spartasoft and Cru.</p>
 
-        <h2>Hobbies:</h2>
+        <h3>Hobbies:</h3>
         <ul class="burndown">
             <li>Video Games</li>
             <li>Tabletop Games</li>
