--- a/contact.html
+++ b/contact.html
@@ -5,22 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>MI 349 Blog Page</title>
+    <title>MI 349 Blog Contact Page</title>
 </head>
 <body>
-    <header>
-        <h1>Michael Burkett's Blog (MI 349)</h1>
-    </header>
+    <section class="sticky">
+        <header>
+            <h1>Michael Burkett's Blog (MI 349)</h1>
+        </header>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul class="link-tree">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </section>
 
-    <section id=content>
+    <main id=content>
         <h2>Contact Form</h2>
         <form>
             <div>
@@ -46,6 +48,6 @@
             </div>
             <button data-buttontype="submission">Submit</button>
         </form>
-    </section>
+    </main>
 </body>
 </html>
