--- a/about.html
+++ b/about.html
@@ -13,19 +13,23 @@
             <h1>Michael Burkett's Blog (MI 349)</h1>
         </header>
 
-        <nav>
-            <ul class="link-tree">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="cards">
+            <div class="card" id = "c1">
+                <p><a href="index.html">Home</a></p>
+            </div>
+            <div class="card" id = "c2">
+                <p><a href="about.html">About</a></p>
+            </div>
+            <div class="card" id = "c3">
+                <p><a href="contact.html">Contact</a></p>
+            </div>
+        </div>
     </section>
 
     <main id="content">
 
         <figure class="self-pic">
-            <img src="IMG_2829.JPG" width=200 height=300 alt="A picture of me.">
+            <img src="IMG_2829.JPG" width=200 height=300 alt="A picture of me." class="me">
             <figcaption>Picture of myself.</figcaption>
         </figure>
 
