--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,17 @@
             <h1>Michael Burkett's Blog (MI 349)</h1>
         </header>
 
-        <nav>
-            <ul class="link-tree">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="cards">
+            <div class="card" id = "c1">
+                <p><a href="index.html">Home</a></p>
+            </div>
+            <div class="card" id = "c2">
+                <p><a href="about.html">About</a></p>
+            </div>
+            <div class="card" id = "c3">
+                <p><a href="contact.html">Contact</a></p>
+            </div>
+        </div>
     </section>
 
     <main id=content>
