--- a/index.html
+++ b/index.html
@@ -13,21 +13,25 @@
             <h1>Michael Burkett's Blog (MI 349)</h1>
         </header>
 
-        <nav>
-            <ul class="link-tree">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="cards">
+            <div class="card" id = "c1">
+                <p><a href="index.html">Home</a></p>
+            </div>
+            <div class="card" id = "c2">
+                <p><a href="about.html">About</a></p>
+            </div>
+            <div class="card" id = "c3">
+                <p><a href="contact.html">Contact</a></p>
+            </div>
+        </div>
     </section>
 
     <main id="content">
-        <section id="blogs">
+        <div id="blogs">
             <article class="blog-post">
                 <h2>Game Review: Payday 2</h2>
 
-                <p><img src="Payday2.PNG" alt="The payday 2 logo."></p>
+                <p><img src="Payday2.PNG" alt="The payday 2 logo." class="payday"></p>
 
                 <p><em>Written by Michael Burkett on 10/14/2021</em></p>
 
@@ -45,7 +49,7 @@
             <article class="blog-post">
                 <h2>Game Review: Outward</h2>
 
-                <p><img src="Outward.jpg" width=576 height=324 alt="A screenshot of me fighting the Royal Manticore in Outward."></p>
+                <p><img src="Outward.jpg" width=576 height=324 alt="A screenshot of me fighting the Royal Manticore in Outward." class="outward"></p>
 
                 <p><em>Written by Michael Burkett on 10/14/2021</em></p>
 
@@ -87,8 +91,7 @@
                     </tr>
                 </table>
             </article>
-        </section>
-
+        </div>
     </main>
 
     <section>
